erDiagram
    COLECAO ||--o{ ESTAMPA : contem
    ESTAMPA ||--o{ ESTAMPA_PECA : associa
    PECA ||--o{ ESTAMPA_PECA : compoe


    COLECAO {
        int id_colecao PK
        string nome
        date data_inicio
        date data_fim
    }

    ESTAMPA {
        int id_estampa PK
        string nome
        int quantidade
        int colecao_id FK
    }

    PECA {
        int peca_id PK
        string tipo
        string tamanho
        string cor
        int quantidade
    }

    ESTAMPA_PECA {
        int estampa_id FK
        int peca_id FK
    }
